# Itsumi

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
assets/database/: schema.sql
assets/messages/fun/: 8ball.json  backflip_fail.json  backflip_success.json  kill.json  ooc.json  rate.json
cogs/: Dev.py  ErrorEvents.py  Fun.py  Info.py  fun.py  info.py  moderation.py  system.py  utility.py
data/: database.db
logs/errors/2026-06-06/: 0b0e84ef.json  7ea12207.json  9649ff8b.json  aed77859.json  b7d30285.json
utils/: __init__.py  assets.py  audit.py  automation.py  bot.py  database.py  error_handler.py  event_bus.py  jobs.py  logger.py  metrics.py  permissions.py  registry.py
utils/error_handler/: handler.py
utils/ui/: embed_factory.py  forensics.py  fun.py  fun_layout.py  info.py  moderation.py  security_auditor.py  system.py  utility.py
