[project]
name = "itsumi-pycord"
version = "1.2.0"
description = "A modern, high-infrastructure Discord bot built with Pycord."
requires-python = ">=3.12"
authors = [
    { name = "Kazehara KaiTy", email = "kaitysocute@gmail.com" }
]
dependencies = [
    "py-cord>=2.6.1",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.1",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "pydantic>=2.0.0",
    "pytimeparse>=1.1.8",
    "rapidfuzz>=3.5.2"
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]
ignore = ["E501"] # Ignore long lines (already handled by formatter)

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
